info/03-freedriving_testdone/RemoteApi/include/DianaAPI.h

/*************************************** version 0.1 ***************************************/

extern "C" typedef struct _SrvNetSt {
    char SrvIp[32];
    unsigned short LocHeartbeatPort;
    unsigned short LocRobotStatePort;
    unsigned short LocSrvPort;
    unsigned short LocRealtimeSrvPort;
} srv_net_st;
DIANA_API int initSrv(FNCERRORCALLBACK fnError, FNCSTATECALLBACK fnState, srv_net_st *pinfo);
DIANA_API int destroySrv(const char *strIpAddress = "");
DIANA_API int setPushPeriod(int intPeriod, /*IN*/ const char *strIpAddress = "");  //设置状态推送频率
DIANA_API int moveTCP(/*IN*/ tcp_direction_e d, /*IN*/ double v, /*IN*/ double a,
                      /*IN[6]*/ double *active_tcp = nullptr,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int rotationTCP(/*IN*/ tcp_direction_e d, /*IN*/ double v, /*IN*/ double a,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int moveJoint(/*IN*/ joint_direction_e d, /*IN*/ int i, /*IN*/ double v, /*IN*/ double a,
                        /*IN*/ const char *strIpAddress = "");
DIANA_API int moveJToTarget(/*IN[7]*/ double *joints, /*IN*/ double v, /*IN*/ double a,
                            /*IN*/ const char *strIpAddress = "");
DIANA_API int moveJToPose(/*IN[6]*/ double *pose, /*IN*/ double v, /*IN*/ double a,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int moveLToTarget(/*IN[7]*/ double *joints, /*IN*/ double v, /*IN*/ double a,
                            /*IN*/ const char *strIpAddress = "");
DIANA_API int moveLToPose(/*IN[6]*/ double *pose, /*IN*/ double v, /*IN*/ double a,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int speedJ(/*IN[7]*/ double *speed, /*IN*/ double a, /*option*/ double t,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int speedL(/*IN[6]*/ double *speed, /*IN[2]*/ double *a, /*option*/ double t,
                     /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int freeDriving(bool enable, /*IN*/ const char *strIpAddress = "");
DIANA_API int stop(const char *strIpAddress = "");
DIANA_API int forward(/*IN[7]*/ double *joints, /*OUT[6]*/ double *pose, /*IN[6]*/ double *active_tcp = nullptr,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int getLastError(const char *strIpAddress = "");
/*************************************** version 0.4 ***************************************/

DIANA_API char getRobotState(const char *strIpAddress = "");
DIANA_API int setEndKeyEnableState(bool bEnable, const char *strIpAddress = "");
extern "C" typedef bool (*FNCSTOP)(const char *strIpAddress);