info/03-freedriving_testdone/RemoteApi/include/DianaAPIDef.h

extern "C" typedef void (*FNCERRORCALLBACK)(int e, const char *strIpAddress);
// TrajectoryState
extern "C" typedef struct _TrajectoryState {
    int taskId;
    int segCount;
    int segIndex;
    int errorCode;
    int isPaused;
    int isFreeDriving;
    int isZeroSpaceFreeDriving;
    int isHoldBrake;
} StrTrajectoryState;
extern "C" typedef struct _ErrorInfo {
    int errorId;
    int errorType;
    int errorCode;
    char errorMsg[64];
} StrErrorInfo;
//用户层机械臂反馈状态结构体
extern "C" typedef struct _RobotStateInfo {
    double jointPos[7];
    double jointAngularVel[7];
    double jointCurrent[7];
    double jointTorque[7];
    double tcpPos[6];
    double tcpExternalForce;
    bool bCollision;
    bool bTcpForceValid;
    double tcpForce[6];
    double jointForce[7];
    StrTrajectoryState trajState;
    StrErrorInfo errorInfo;
    double sixAxiaForce[6];
    bool bSixAxiaForceValid;
} StrRobotStateInfo;
extern "C" typedef void (*FNCSTATECALLBACK)(StrRobotStateInfo *pinfo, const char *strIpAddress);