info/03-freedriving_testdone/RemoteApi/lib/DianaApi.py


class StrRobotStateInfo(Structure):
    _pack_ = 1
    _fields_ = [
        ('jointPos', c_double * 7),
        ('jointAngularVel', c_double * 7),
        ('jointCurrent', c_double * 7),
        ('jointTorque', c_double * 7),
        ('tcpPos', c_double * 6),
        ('tcpExternalForce', c_double),
        ('bCollision', c_bool),
        ('bTcpForceValid', c_bool),
        ('tcpForce', c_double * 6),
        ('jointForce', c_double * 7),
        ('trajState', StrTrajectoryState),
        ('StrErrorInfo', StrErrorInfo)
    ]

class DIANA_DH_A(Structure):
        pass


DIANA_DH_A._fields_ = [
    ('values', c_double * 7)
]

class DIANA_DH_Alpha(Structure):
        pass


DIANA_DH_Alpha._fields_ = [
    ('values', c_double * 7)
]

class DIANA_DH_D(Structure):
        pass


DIANA_DH_D._fields_ = [
    ('values', c_double * 7)
]

class DIANA_DH_Theta(Structure):
        pass


DIANA_DH_Theta._fields_ = [
    ('values', c_double * 7)
]


class DIANA_JACOBI_MATRIX(Structure):
    pass


DIANA_JACOBI_MATRIX._fields_ = [
    ('values', c_double * 42)
]

class DIANA_DIGTAL_VALUE_ALL(Structure):
    pass

DIANA_DIGTAL_VALUE_ALL._fields_ = [
    ('values', c_int * 8)
]

class DIANA_ANALOG_VALUE_ALL(Structure):
    pass

DIANA_ANALOG_VALUE_ALL._fields_ = [
    ('values', c_double * 2)
]

class DIANA_ANALOG_MODE(Structure):
    pass

DIANA_ANALOG_MODE._fields_ = [
    ('values', c_int * 2)
]

class DIANA_DH_R(Structure):
    pass

DIANA_DH_R._fields_ = [
    ('values', c_double * 28)
]

class DIANA_DH_WRT(Structure):
    pass

DIANA_DH_WRT._fields_ = [
    ('values', c_double * 6)
]

class DIANA_DH_TRT(Structure):
    pass

DIANA_DH_TRT._fields_ = [
    ('values', c_double * 3)
]

class DIANA_DH_CONFID(Structure):
    pass

DIANA_DH_CONFID._fields_ = [
    ('values', c_double * 2)
]

class DIANA_DH_RTw2b(Structure):
    pass

DIANA_DH_RTw2b._fields_ = [
    ('values', c_double * 6)
]

class DIANA_DH_RTf2t(Structure):
    pass

DIANA_DH_RTf2t._fields_ = [
    ('values', c_double * 3)
]

class DIANA_KP(Structure):
    pass

DIANA_KP._fields_ = [
    ('values', c_double * 7)
]

class DIANA_KD(Structure):
    pass

DIANA_KD._fields_ = [
    ('values', c_double * 7)
]

class DIANA_ACTIVE_TCP(Structure):
    pass

DIANA_ACTIVE_TCP._fields_ = [
    ('values', c_double * 6)
]

class DIANA_SIX_AXIS_ZERO_OFFSET(Structure):
    pass


DIANA_SIX_AXIS_ZERO_OFFSET._fields_ = [
    ('values', c_double * 10)
]

class DIANA_FEATURE_CODE_STATE(Structure):
        pass

DIANA_FEATURE_CODE_STATE._fields_ = [
    ('value', c_bool)
]

class DIANA_SIX_AXIS_STATE(Structure):
        pass

DIANA_SIX_AXIS_STATE._fields_ = [
    ('value', c_bool)
]


class DIANA_LOAD_IDENTIFICATION_RESULT(Structure):
        pass

DIANA_LOAD_IDENTIFICATION_RESULT._fields_ = [
    ('values', c_double * 10)
]

class DIANA_LOAD_IDENTIFICATION_WAYPOINT(Structure):
    _pack_ = 1
    _fields_ = [
        ('joints', c_double * 7),
        ('vel', c_double)
    ]

class DIANA_LOAD_IDENTIFICATION_PARAM(Structure):
    _pack_ = 1
    _fields_ = [
        ('bIsMassValid', c_bool),
        ('dblMass', c_double),
        ('arrWaypoints', POINTER(DIANA_LOAD_IDENTIFICATION_WAYPOINT)),
        ('arrWaypointsSize', c_int),
    ]

class DIANA_RGB_LED_STATE(Structure):
    pass
DIANA_RGB_LED_STATE._fields_ = [
    ('red', c_uint8),
    ('green', c_uint8),
    ('blue', c_uint8),
]

class DIANA_RGB_LED_ALL_JOINTS(Structure):
    pass

DIANA_RGB_LED_ALL_JOINTS._fields_ = [
    ('color',DIANA_RGB_LED_STATE * 7),
]

# Structure ends


#Callback function starts
#add callback function here
FNCERRORCALLBACK = CFUNCTYPE(None, c_int)

FNCSTATECALLBACK = CFUNCTYPE(None, POINTER(StrRobotStateInfo))

FNCSTOP = CFUNCTYPE(c_bool, c_char_p)
#Callback function ends


def message(ret):
    if(ret >= 0):
        return True
    else:
        errorcode = getLastError()
        errorMessage = errorCodeMessage.get(errorcode)
        callerName = 'function ' + sys._getframe().f_back.f_code.co_name + ' fails,'
        if errorMessage == None:
            print(callerName + 'Error Code ' + str(errorcode))
        else:
            print(callerName + errorMessage)
        return False

def load_identification_message(ret):
    if(ret >= 0):
        return True
    else:
        errorMessage = loadIdentificationErrorCodeMessage.get(ret)
        callerName = 'function ' + sys._getframe().f_back.f_code.co_name + ' fails,'
        if errorMessage == None:
            print(callerName + 'Error Code ' + str(ret))
        else:
            print(callerName + errorMessage)
        return False

def wait_move():
    time.sleep(0.02)
    while True:
        state = getRobotState()
        if state != 0:
            break
        else:
            time.sleep(0.001)
    stop()

def initSrv(srv_net_st, fnError=None, fnState=None):
    pinfo = SRV_NET_ST()
    ipAddress = srv_net_st[0]
    pinfo.ipAddress = bytes(ipAddress.encode('utf-8'))
    pinfo.SLocHeartbeatPortrvIp = srv_net_st[1]
    pinfo.LocRobotStatePort = srv_net_st[2]
    pinfo.LocSrvPort = srv_net_st[3]
    pinfo.LocRealtimeSrvPort = srv_net_st[4]
    api_mod.initSrv.argtypes = [FNCERRORCALLBACK, FNCSTATECALLBACK, POINTER(SRV_NET_ST)]
    api_mod.initSrv.restype = c_int
    if fnError == None:
        fnError = FNCERRORCALLBACK()
    if fnState == None:
        fnState = FNCSTATECALLBACK()
    ret = api_mod.initSrv(fnError, fnState, byref(pinfo))
    return message(ret)

def destroySrv(ipAddress=''):
    api_mod.destroySrv.argtypes = [c_char_p]
    api_mod.destroySrv.restype = c_int
    ret = api_mod.destroySrv(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setPushPeriod(period, ipAddress=''):
    api_mod.setPushPeriod.argtypes = [c_int, c_char_p]
    api_mod.setPushPeriod.restype = c_int
    ret = api_mod.setPushPeriod(period, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def moveTCP(d, v, a, ipAddress = ''):
    active_tcp = c_void_p(0)
    api_mod.moveTCP.argtypes = [c_int, c_double, c_double, c_void_p, c_char_p]
    api_mod.moveTCP.restype = c_int
    ret = api_mod.moveTCP(d.value, v, a, active_tcp, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def rotationTCP(d, v, a, ipAddress = ''):
    active_tcp = c_void_p(0)
    api_mod.rotationTCP.argtypes = [c_int, c_double, c_double, c_void_p, c_char_p]
    api_mod.rotationTCP.restype = c_int
    ret = api_mod.rotationTCP(d.value, v, a, active_tcp, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def moveJoint(d, i, v, a, ipAddress = ''):
    api_mod.moveJoint.argtypes = [c_int, c_int, c_double, c_double, c_char_p]
    api_mod.moveJoint.restype = c_int
    ret = api_mod.moveJoint(d.value, i, v, a, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def moveJToTarget(joints, v, a, ipAddress = ''):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.moveJToTarget.argtypes = [
        POINTER(DIANA_JOINTS_POSITION), c_double, c_double, c_char_p]
    api_mod.moveJToTarget.restype = c_int
    ret = api_mod.moveJToTarget(byref(dianaJointPos), v, a, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def moveJToPose(pose, v, a, ipAddress = ''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    active_tcp = c_void_p(0)
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    api_mod.moveJToPose.argtypes = [
        POINTER(DIANA_TCP_POSE), c_double, c_double, c_void_p, c_char_p]
    api_mod.moveJToPose.restype = c_int
    ret = api_mod.moveJToPose(dianaTcpPose, v, a, active_tcp, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def moveLToTarget(joints, v, a, ipAddress = ''):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.moveLToTarget.argtypes = [
        POINTER(DIANA_JOINTS_POSITION), c_double, c_double, c_char_p]
    api_mod.moveLToTarget.restype = c_int
    ret = api_mod.moveLToTarget(dianaJointPos, v, a, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def moveLToPose(pose, v, a, ipAddress = ''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    active_tcp = c_void_p(0)
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    api_mod.moveLToPose.argtypes = [
        POINTER(DIANA_TCP_POSE), c_double, c_double, c_void_p, c_char_p]
    api_mod.moveLToPose.restype = c_int
    ret = api_mod.moveLToPose(dianaTcpPose, v, a, active_tcp, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def speedJ(speed, acc, t=0.0, ipAddress = ''):
    dianaJointsSpeed = DIANA_JOINTS_SPEED()
    dianaJointsSpeed.values = (c_double * 7)()
    for index in range(0, len(speed)):
        dianaJointsSpeed.values[index] = speed[index]
    api_mod.speedJ.argtypes = [POINTER(DIANA_JOINTS_SPEED), c_double, c_double, c_char_p]
    api_mod.speedJ.restype = c_int
    ret = api_mod.speedJ(dianaJointsSpeed, acc, t, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def speedL(speed, acc, t=0.0, ipAddress = ''):
    dianaJointsSpeed = DIANA_JOINTS_SPEED_L()
    dianaJointsSpeed.values = (c_double * 6)()
    for index in range(0, len(dianaJointsSpeed.values)):
        dianaJointsSpeed.values[index] = speed[index]
    dianaJointsAcc = DIANA_JOINTS_ACC()
    dianaJointsAcc.values = (c_double * 2)()
    for index in range(0, len(dianaJointsAcc.values)):
        dianaJointsAcc.values[index] = acc[index]
    active_tcp = c_void_p(0)
    api_mod.speedL.argtypes = [POINTER(DIANA_JOINTS_SPEED_L), POINTER(
        DIANA_JOINTS_ACC), c_double, c_void_p, c_char_p]
    api_mod.speedL.restype = c_int
    ret = api_mod.speedL(dianaJointsSpeed, dianaJointsAcc, t, active_tcp, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setEndKeyEnableState(enable, ipAddress = ''):
    api_mod.setEndKeyEnableState.argtypes = [c_bool, c_char_p]
    api_mod.setEndKeyEnableState.restype = c_int
    ret = api_mod.setEndKeyEnableState(enable, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def freeDriving(enable, ipAddress = ''):
    api_mod.freeDriving.argtypes = [c_bool, c_char_p]
    api_mod.freeDriving.restype = c_int
    ret = api_mod.freeDriving(enable, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def stop(ipAddress = ''):
    api_mod.freeDriving.argtypes = [c_char_p]
    api_mod.stop.restype = c_int
    ret = api_mod.stop(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def forward(joints, pose, ipAddress = ''):
    dianaJointsPosition = DIANA_JOINTS_POSITION()
    dianaJointsPosition.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJointsPosition.values[index] = joints[index]
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    active_tcp = c_void_p(0)
    api_mod.forward.argtypes = [
        POINTER(DIANA_JOINTS_POSITION), POINTER(DIANA_TCP_POSE), c_void_p, c_char_p]
    api_mod.forward.restype = c_int
    ret = api_mod.forward(byref(dianaJointsPosition), byref(dianaTcpPose), active_tcp, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(dianaTcpPose.values)):
        pose[index] = dianaTcpPose.values[index]
    return message(ret)
